src/style.scss
$height-header : 14vh;
$background: #E0E5EC;
$dark-shadow: #A3B1C6;
$light-shadow: #FFFFFF;
$orange : #E84F2C;
$font : #1F2633;



// $background: #1A1A1A;
// $dark-shadow: #00000070;
// $light-shadow: #3A3A3A70;
// $orange : #E84F2C;
// $font : #E0E5EC;



* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
  font-family: 'Quicksand', sans-serif;
}

body {
  min-height: 100vh;
  width: 100vw;
  background: $background;
  overflow-x: hidden;
}

/* utility */

.title {
  font-size: 3.5rem;
  color: $background;
  text-shadow: 4px 4px 2px $dark-shadow , -4px -4px 2px $light-shadow;
  letter-spacing: .3rem;
  font-weight: bold;

  span {
    color: $orange;
  }
}



header {

  height: $height-header;
  margin: 0 2rem;

  nav {
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: space-between;


    .logo {
      font-size: 3rem;
      height: 100%;
      display: flex;
      align-items: center;
      font-weight: bolder;

      a {
        text-decoration: none;
        color: $background;
        text-shadow: 4px 4px 2px $dark-shadow , -4px -4px 2px $light-shadow;

        span {
          color: $orange;
        }
      }
    }

    .nav-social-links {
      list-style: none;
      display: flex;
      align-items: center;
      gap: 2rem;

      li {
        height: 50px;
        width: 50px;
        border-radius: 50%;
        box-shadow: 6px 6px 12px $dark-shadow , -6px -6px 12px $light-shadow;
        display: flex;
        justify-content: center;
        align-items: center;
        cursor: pointer;
        transition: 0.3s linear;

        a {
          text-decoration: none;
          text-transform: capitalize;
          color: $font;
          cursor: pointer;
          font-size: 1.2rem;
        }

        &:hover {
          transform: scale(1.1);
          box-shadow: 8px 8px 16px $dark-shadow , -8px -8px 16px $light-shadow;
        }
      }
    }

    .nav-links {
      list-style: none;
      display: flex;
      align-items: center;
      gap: 2rem;

      li {
        a {
          text-decoration: none;
          text-transform: capitalize;
          color: $font;
          cursor: pointer;
          font-size: 1.2rem;
        }
      }
    }
  }
}


main {
  margin: 0 2rem;
  min-height: calc(100vh - $height-header);
  display: flex;
  flex-direction: column;

  section.section-hero {
    min-height: calc(100vh - $height-header);
    display: flex;
    align-items: center;

    .section-hero-info {
      height: 100%;
      width: 50%;
      display: flex;
      flex-direction: column;
      justify-content: center;

      h1 {
        font-size: 6rem;
        color: $background;
        text-shadow: 8px 8px 4px $dark-shadow , -8px -8px 4px $light-shadow;
        letter-spacing: .3rem;
        font-weight: bold;

        span {
          color: $orange;
        }
      }

      p {
        font-size: 2rem;
        color: $font;
        font-weight: 500;
      }

      .hero-actions {
        margin-top: 3rem;
        display: flex;
        gap: 3rem;

        button {
          border: none;
          background: none;
          font-size: 1.5rem;
          font-weight: 600;
          width: 200px;
          height: 60px;
          border-radius: 25px;
          text-transform: capitalize;
          cursor: pointer;
          transition: 0.3s all;

          &:hover {
            transform: scale(1.1);
          }
        }

        button:nth-child(1) {
          box-shadow: 10px 10px 10px $dark-shadow , -10px -10px 10px $light-shadow;
          background: $orange;
          color: #FFFFFF;
        }

        button:nth-child(2) {
          color: $orange;
          box-shadow: 10px 10px 10px $dark-shadow , -10px -10px 10px $light-shadow;

          &:focus {
            outline: 2px dotted $orange;
          }
        }
      }
    }

    .section-hero-game {
      height: 100%;
      width: 50%;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;

      canvas {
        width: 620px;
        height: 450px;
        border-radius: 0.8rem;
        box-shadow: inset 10px 10px 15px $dark-shadow , inset -10px -10px 15px $light-shadow;
      }

      img {
        display: none;
      }
    }
  }

  #section-education {
    min-height: 100vh;

    .title {
      height: 10vh;
    }

    .container {
      height: 100%;
      display: flex;

      .section-education-info {
        width: 100%;
        // display: flex;
        // flex-direction: column;
        // gap: 2rem;

        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(2, 1fr);
        gap: 1rem;
        padding-top: 2rem;

        .education-card {
          display: flex;
          gap: 1.5rem;
          box-shadow: 10px 10px 10px $dark-shadow , -10px -10px 10px $light-shadow;
          padding: 1rem;
          border-radius: 20px;

          p {
            font-size: 3rem;
            color: rgba($color: $font, $alpha: 1);
            font-weight: bold;
          }

          .education-info {
            text-transform: capitalize;

            p {
              font-size: 1.3rem;
              color: rgba($color: $font, $alpha: 0.8);
              font-weight: 600;
            }

            h2 {
              font-size: 1.5rem;
              color: rgba($color: $font, $alpha: 1);
              margin-top: 5px;
            }

            h4 {
              font-size: 2rem;
              color: rgba($color: $font, $alpha: 0.4);
              margin-top: 2px;
            }

            .eduration {
              font-size: 1.1rem;
              margin-top: 6px;
            }

            .escore {
              font-size: 1rem;
              margin-top: 4px;
            }
          }
        }
      }
    }
  }


  #section-skills {
    min-height: 100vh;

    h2 {
      height: 10vh;
    }

    .container {
      height: 90vh;
      display: grid;
      grid-template-columns: repeat(4, 1fr);
      grid-template-rows: repeat(3, 1fr);
      row-gap: 4rem;
      margin-top: 2rem;

      .card {
        display: flex;
        flex-direction: column;
        gap: 1rem;
        align-items: center;

        .card-header {
          .card-header-child {
            height: 50px;
            width: 50px;
            display: flex;
            align-items: center;
            justify-content: center;
            border-radius: 50%;
            box-shadow: 6px 6px 12px $dark-shadow , -6px -6px 12px $light-shadow;
          }
        }

        .card-content {
          .card-content-child {
            height: 200px;
            width: 200px;
            border-radius: 50%;
            box-shadow: 15px 15px 30px $dark-shadow , -15px -15px 30px $light-shadow;
            display: flex;
            align-items: center;
            justify-content: center;

            span {
              height: 150px;
              width: 150px;
              border-radius: 50%;
              box-shadow: inset 15px 15px 30px $dark-shadow , inset -15px -15px 30px $light-shadow;
              display: flex;
              align-items: center;
              justify-content: center;

              i {
                color: $font;
                font-size: 4rem;
                color: $font;
              }

              img {
                width: 64px;
                filter: grayscale(80%);
              }
            }

            &:hover {
              transform: rotate(40deg);
            }

            &:hover>span {
              transform: rotate(-40deg);
            }

            &:hover>span>i,
            &:hover>span>img {
              transform: scale(1.1);
            }
          }
        }

        .card-footer {
          display: flex;
          align-items: center;
          flex-direction: column;

          h2 {
            font-size: 2rem;
            text-transform: uppercase;
            color: rgba($color: #000000, $alpha: 0.8);
          }

          p {
            width: 60%;
            text-align: center;
            color: rgba($color: #000000, $alpha: 0.5);
          }
        }
      }
    }
  }
}


@media screen and (max-width : 600px) {

  header {

    nav {
      flex-direction: column;
      align-items: center;
      gap: 2rem;

      .nav-social-links {
        gap: 1.5rem;
      }

      .nav-links {
        display: none;
      }
    }

  }

  main {
    section.section-hero {

      .section-hero-info {
        width: 100%;
        align-items: center;

        h1 {
          text-align: center;
        }

        p {
          text-align: center;
        }

        .hero-actions {
          flex-direction: column;
          gap: 1.8rem;
        }
      }

      .section-hero-game {
        display: none;
      }
    }

    #section-education {
      .container {
        .section-education-info {
          grid-template-columns: repeat(1, 1fr);
          grid-template-rows: repeat(3, 1fr);
        }
      }
    }

    #section-skills {
      .container {
        grid-template-columns: repeat(1, 1fr);
      }
    }
  }
}

